<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/drawable_sheet_rounded_dialog_bg"
  android:orientation="vertical"
  android:paddingStart="18dp"
  android:paddingEnd="18dp"
  android:paddingBottom="24dp"
  tools:context=".ui.fragments.DetailedViewSheet">

  <View
    android:layout_width="40dp"
    android:layout_height="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="24dp"
    android:background="@drawable/drawable_rounded_view_gray_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      app:cardCornerRadius="12dp">

      <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_cover_placeholder" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/primary_color"
        android:textSize="22sp"
        tools:text="This is the song title" />

      <TextView
        android:id="@+id/tvItemArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="14sp"
        tools:text="The artist" />

      <LinearLayout
        android:id="@+id/layoutTypeAndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/tvItemType"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="6dp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="12sp"
          tools:text="Song/Album" />

        <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:layout_margin="2dp"
          android:background="@color/primary_color" />

        <TextView
          android:id="@+id/tvReleaseDate"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="6dp"
          android:layout_weight="2"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="12sp"
          tools:text="Mar 2020" />
      </LinearLayout>

      <TextView
        android:id="@+id/tvItemAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="12sp"
        tools:text="The album" />

      <LinearLayout
        android:id="@+id/layoutGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/genres"
          android:textSize="11sp" />

        <TextView
          android:id="@+id/tvGenres"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_weight="1"
          android:textSize="11sp"
          tools:text="pop, rock, arabic, khaleeji" />


      </LinearLayout>

      <LinearLayout
        android:id="@+id/layoutPopularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/popularity"
          android:textSize="11sp" />

        <RatingBar
          android:id="@+id/popularityBar"
          style="?android:attr/ratingBarStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:numStars="5"
          android:theme="@style/popularityBarStyle"
          tools:rating="3.5" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/layoutTotalListens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/total_times_listened"
          android:textSize="11sp" />

        <TextView
          android:id="@+id/tvTotalTimesListened"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_weight="1"
          android:textColor="@color/primary_color"
          android:textSize="11sp"
          android:textStyle="bold"
          tools:text="31822" />


      </LinearLayout>
    </LinearLayout>


  </LinearLayout>

</LinearLayout>